--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="social-media">
-      <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+      <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
       <a href="https://www.x.com/"><i class="fa-brands fa-x-twitter"></i></a>
       <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
     </div>
