Make it resposive

--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-
 </head>
 <body>
-  <!-- <picture>
-    <source srcset="images/bg-desktop.svg" media="(min-with:768px)">
-    <source srcset="images/bg-mobile.svg">
-  </picture> -->
-  <main class="container">
-    <div class="logo"><img src="images/logo.svg" alt=""></div>
+  <main>
+    <header class="logo"><img src="images/logo.svg" alt="Huddle"></header>
     <div class="card">
       <div class="illustration"><img src="images/illustration-mockups.svg" alt=""></div>
       <div class="hero-content">
@@ -28,15 +27,15 @@
             Create connections with your users as you engage in genuine discussion.
           </p>
         </div>
-        <button>Register</button>
+        <a class="register">Register</a>
       </div>
     </div>
-    <div class="social-media">
-      <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://www.x.com/"><i class="fa-brands fa-x-twitter"></i></a>
-      <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-    </div>
   </main>
-
+  <footer class="social-media">
+    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.x.com/"><i class="fa-brands fa-x-twitter"></i></a>
+    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+  </footer>
+  
 </body>
 </html>
