Added some accessability labels

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <header class="logo"><img src="images/logo.svg" alt="Huddle"></header>
     <div class="card">
-      <div class="illustration"><img src="images/illustration-mockups.svg" alt=""></div>
+      <div class="illustration"><img src="images/illustration-mockups.svg" alt="huddle mockup"></div>
       <div class="hero-content">
         <div class="text-content">
           <h1>Build The Community Your Fans Will Love</h1>
@@ -27,14 +27,14 @@
             Create connections with your users as you engage in genuine discussion.
           </p>
         </div>
-        <a class="register">Register</a>
+        <a class="register" aria-label="register form">Register</a>
       </div>
     </div>
   </main>
   <footer class="social-media">
-    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-    <a href="https://www.x.com/"><i class="fa-brands fa-x-twitter"></i></a>
-    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://www.facebook.com/" aria-label="folow us on facebook"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.x.com/"   aria-label="folow us on X"><i class="fa-brands fa-x-twitter"></i></a>
+    <a href="https://www.instagram.com/"  aria-label="folow us on instagram"><i class="fa-brands fa-instagram"></i></a>
   </footer>
   
 </body>
