Add text align left on desktop version

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             Create connections with your users as you engage in genuine discussion.
           </p>
         </div>
-        <a class="register" aria-label="register form">Register</a>
+        <a class="register">Register</a>
       </div>
     </div>
   </main>
